# concurrency2k20

./: README.md
implementation/task_1/: Makefile  README  README.md  multiplication.cpp  report.md
implementation/task_1/scripts/: requirements.txt  run.py
implementation/task_1/sources/: CMakeLists.txt  Makefile  Matrix.cpp  Matrix.h  MatrixMultiplier.cpp  MatrixMultiplier.h  main.cpp  matrix.cpp  matrix.h  multiplication.cpp  openmp_multiplication.cpp
implementation/task_2/: Makefile  README.md  report.md
implementation/task_2/sources/: CMakeLists.txt  Makefile  jacobi.cpp  jacobi.h  jacobi_mpi.cpp  main.cpp  matrix_generator.cpp  vector_generator.cpp
implementation/task_3/: Makefile  README.md
implementation/task_3/sources/: CMakeLists.txt  Makefile  array.cpp  array.h  array_generator.cpp  hypercube_quicksort.cpp  hypercube_quicksort.h  main.cpp  quick_sort_mpi.cpp  quicksort.cpp  quicksort.h  quicksort_mpi.cpp  quicksort_mpi.h  utils.cpp  utils.h
implementation/task_4/: Makefile  README.md
implementation/task_4/sources/: CMakeLists.txt  dijkstra.cpp  dijkstra.h  djikstra.cpp  djikstra.h  graph.cpp  graph.h  main.cpp
implementation/task_4/sources/src/: Main.java
implementation/task_4/sources/src/graph/: DistanceEstimator.java  Edge.java  Graph.java  GraphFileParser.java  NodesPair.java  Point.java
implementation/task_4/sources/src/path/: ConcurrentDjikstraPathFinder.java  DjikstraPathFinder.java  DjikstraThread.java  StopNodeSearcher.java
reports/: task_1.md  task_1.txt  task_2.md  task_3.md  task_4.md
task_1/: Makefile  matrix_generator.cpp  multiplication.cpp  openmp_multiplication.cpp
(+7 files in other folders)
